@@ -1,3 +1,9 @@
+2003-07-02  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=116568
+	* gnome-settings-daemon/gnome-settings-xsettings.c
+	(gnome_xft_settings_set_xresources) : generate values in locale C
+
 2003-06-27  Richard Hult  <richard@imendio.com>
 
 	* typing-break/drw-intl.h: Remove this and use gnome-i18n.h
